# fft-benchmark-lab

./: .gitignore  README.md  fft_selection.py  get_regitered_fft.py  main.py  pyproject.toml  requirements.txt
fft_core/: __init__.py  fft_base.py  fft_iterative.py  fft_numba.py  fft_numba_inplace.py  fft_prototype.py  fft_radix4_iterative.py  fft_radix4_recursive.py  selection.py
fft_core/example/: fft_base.py  fft_iterative.py  fft_numba.py  fft_numba_inplace.py  fft_radix4_iterative.py  fft_radix4_recursive.py
utils/: __init__.py  csv_utils.py  io_utils.py  test.py  test_case.py
