[project]
name = "fft_project"
version = "0.1.0.dev0"
description = "Hands-on exploration and benchmarking of custom FFT implementations"
authors = [
  { name="Rajata Thamcharoensatit" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numba>=0.61.2",
    "numpy>=2.2.6",
    "scipy>=1.15.3",
]
