[project]
name = "custom-fft-lab"
version = "0.3.0.dev0"
description = "Hands-on exploration and benchmarking of custom FFT implementations"
authors = [
  { name="Rajata Thamcharoensatit" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numba>=0.61.2",
    "numpy>=2.2.6",
    "pandas>=2.3.1",
    "polars>=1.31.0",
    "scipy>=1.15.3",
]
