[project]
name = "fft-benchmark-lab"
version = "0.3.1"
description = "Hands-on exploration and benchmarking of custom FFT implementations"
authors = [
  { name="Rajata Thamcharoensatit" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "colorama>=0.4.6",
    "numba>=0.61.2",
    "numpy>=2.2.6",
    "pandas>=2.3.1",
    "polars>=1.31.0",
    "scipy>=1.15.3",
]
